# lancea

./: .gitignore  AGENTS.md
engine/: Cargo.toml
engine/crates/bus/: Cargo.toml
engine/crates/bus/src/: lib.rs
engine/crates/engined/: Cargo.toml
engine/crates/engined/src/: main.rs
engine/crates/engined/tests/: dbus_roundtrip.rs
engine/crates/model/: Cargo.toml
engine/crates/model/src/: lib.rs
engine/crates/provider-apps/: Cargo.toml
engine/crates/provider-apps/src/: lib.rs
engine/crates/provider-apps/tests/: smoke.rs
engine/crates/provider-emoji/: Cargo.toml
engine/crates/provider-emoji/src/: lib.rs
engine/crates/provider-emoji/tests/: smoke.rs
engine/crates/registry/: Cargo.toml
engine/crates/registry/src/: lib.rs
ui/: CMakeLists.txt
ui/qml/: Main.qml  PreviewPane.qml
ui/src/: AppProxy.h  ClipboardProxy.h  EngineProxy.cpp  EngineProxy.h  main.cpp
