[package]
name = "lancea-bus"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time"] }
tracing = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
zbus = { version = "5", default-features = false, features = ["tokio"] }

lancea-model = { path = "../model" }
lancea-registry = { path = "../registry" }
lancea-provider-emoji = { path = "../provider-emoji" }
