[package]
name = "lancea-engined"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "engined"
path = "src/main.rs"

[dependencies]
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }

lancea-bus = { path = "../bus" }

[dev-dependencies]
zbus = { version = "5", default-features = false, features = ["tokio"] }
serde_json = "1.0"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
futures-lite = "2.6.1"
